test/netlist/error/output-not-assigned.bop
A() = c
where
end where;
